Interpreter/Examples/bad/example1.jam
/* No main block */
{
vars:
    int x = 0;
code:
    print(x);
}
